--- a/config/openauto/openauto_system.ini
+++ b/config/openauto/openauto_system.ini
@@ -7,23 +7,37 @@ TimeFormat=1
 ShowTopBarInAndroidAuto=false
 ShowTemperature=true
 ShowClockInMirroring=true
-ShowClockInAndroidAuto=false
-ControlsOpacity=75
+ShowClockInAutobox=true
+ShowClockInAndroidAuto=true
+ControlsOpacity=40
 FontScale=0
-Language=Nederlands
+Language=Polski
+ObdBarDisplayMode=1
+ShowClock=true
+TileStyle=1
 [System]
-AndroidAutoAutostart=true
+AndroidAutoAutostart=false
 TouchscreenType=1
 ScreenType=0
 ScreenSplitPercentage=30
-DownloadCoverart=false
+DownloadCoverart=true
 [Mirroring]
 ShowTopBarInMirroring=true
-ResolutionWidth=1024
-ResolutionHeight=600
+ResolutionWidth=1280
+ResolutionHeight=720
+[Autobox]
+ShowTopBarInAutobox=true
+ScreenDPI=160
+Name=Autobox-OAP
+OemName=
+AutomaticWirelessConnection=false
+WorkMode=2
+VendorId=4884
+ProductId=5408
 [DayNight]
-OpenAutoDayNightControllerType=3
-AndroidAutoDayNightControllerType=3
+OpenAutoDayNightControllerType=2
+AndroidAutoDayNightControllerType=2
+AutoboxDayNightControllerType=2
 SunriseTime=6:0
 SunsetTime=18:0
 LightSensorThreshold=100
@@ -31,54 +45,55 @@ LightSensorDescriptor=/dev/i2c-3
 LightSensorAddress=57
 LightSensorMinRange=0
 LightSensorMaxRange=30000
-OpenAutoDayNightMode=1
-AndroidAutoDayNightMode=0
-GpioPin=5
+OpenAutoDayNightMode=0
+AndroidAutoDayNightMode=2
+AutoboxDayNightMode=2
+GpioPin=1
 [Day]
-WallpaperPath=file:///home/pi/wallpaper.png
+WallpaperPath=file:///home/pi/OAP-Config/config/bg_day.png
 WallpaperMode=0
 WallpaperOpacity=100
-BackgroundColor=#4b4b4b
-HighlightColor=#1f85ff
+BackgroundColor=#e2e3db
+HighlightColor=#8f97a2
 ControlBackground=#e2e2e2
-ControlForeground=#1f85ff
+ControlForeground=#000000
 NormalFontColor=#000000
-SpecialFontColor=#000000
+SpecialFontColor=#c02626
 DescriptionFontColor=#202020
-BarBackgroundColor=#b2b2b2
-ControlBoxBackgroundColor=#808080
-GaugeIndicatorColor=#F5B42A
-IconShadowColor=#60000000
-IconColor=#000000
-SideWidgetBackground=#b2b2b2
+BarBackgroundColor=#ffffff
+ControlBoxBackgroundColor=#bcc6d3
+GaugeIndicatorColor=#c02626
+IconShadowColor=#00000000
+IconColor=#c02626
+SideWidgetBackgroundColor=#b2b2b2
 BarShadowColor=#333333
 [Night]
-WallpaperPath=file:///home/pi/wallpaper.png
+WallpaperPath=file:///home/pi/OAP-Config/config/bg_night.png
 WallpaperMode=0
 WallpaperOpacity=100
-BackgroundColor=#4b4b4b
-HighlightColor=#F5B42A
-ControlBackground=#000000
-ControlForeground=#F5B42A
+BackgroundColor=#192842
+HighlightColor=#3a4d63
+ControlBackground=#192842
+ControlForeground=#fffff
 NormalFontColor=#ffffff
-SpecialFontColor=#F5B42A
+SpecialFontColor=#faa524
 DescriptionFontColor=#888888
-BarBackgroundColor=#000000
-ControlBoxBackgroundColor=#303030
-GaugeIndicatorColor=#F5B42A
-IconShadowColor=#80000000
-IconColor=#ffffff
-SideWidgetBackground=#000000
-BarShadowColor=#333333
+BarBackgroundColor=#0e1625
+ControlBoxBackgroundColor=#141f33
+GaugeIndicatorColor=#f5b42a
+IconShadowColor=#00000000
+IconColor=#faa524
+SideWidgetBackgroundColor=#000000
+BarShadowColor=#00333333
 [General]
 HandednessOfTraffic=0
 ShowClock=true
 HasTouchscreen=true
-TemperatureSensorDescriptor=/sys/bus/w1/devices/28-02131de42aaa/w1_slave
+TemperatureSensorDescriptor=
 [Video]
 FPS=1
-Resolution=2
-ScreenDPI=244 ; 165 or lower for splitscreen
+Resolution=1
+ScreenDPI=140
 MarginWidth=0
 MarginHeight=0
 ProjectionOrientation=0
@@ -86,24 +101,23 @@ ProjectionOrientation=0
 MusicAudioChannelEnabled=true
 SpeechAudioChannelEnabled=true
 SplashFilePath=
-PhoneNotificationFilePath=file:///home/pi/notification.wav
-RingtoneFilePath=file:///home/pi/ringtone.wav
+PhoneNotificationFilePath=
+RingtoneFilePath=
 VolumeStep=1
-VolumeGestureEnabled=0
 MixerName=
 MuteMixerName=
 Autoplay=false
 MediaStorageMusicVolumeLevel=100
 [Bluetooth]
-AdapterType=1
+AdapterType=0
 RemoteAdapterAddress=
 [Obd]
 ObdAdapterStartupSequence=ATZ;ATE0;ATS0;ATL0;ATH0;ATSP0
 ObdAdapterDescriptor=
 ObdAdapterBaudrate=115200
 ObdProbePeriod=5
-ObdDeviceType=2
-ObdAdapterRfCommAddress=88:1B:99:0B:19:85
+ObdDeviceType=0
+ObdAdapterRfCommAddress=
 ObdAdapterRfCommChannel=1
 ObdMaxNoDataResponseCount=20
 [RearCamera]
@@ -111,19 +125,40 @@ DeviceDescriptor=v4l2:///dev/video0
 GpioPin=0
 ShowGuideLine=false
 Orientation=0
+ScriptPath=
 BackendType=0
 ResolutionWidth=1280
 ResolutionHeight=720
 ViewFinderIndex=0
 VolumeLevelEnabled=false
 VolumeLevel=70
+[Gestures]
+VolumeGestureEnabled=0
+SensorDescriptor=
+Enabled=false
+InactivityTimeout=0
+SensorOrientation=0
+NextTrackGestureEnabled=true
+PreviousTrackGestureEnabled=true
+AnswerCallGestureEnabled=true
+HangUpCallGestureEnabled=true
+VolumeUpGestureEnabled=true
+VolumeDownGestureEnabled=true
+TogglePlayGestureEnabled=true
 [Wireless]
-HotspotEnabled=true
+HotspotEnabled=false
 Enabled=true
-Ssid=FordRuben
+Ssid=Insignia
 Bssid=
-Key=FordFeestRuben
+Key=257525
 Port=5000
-HotspotBand=1
+HotspotBand=0
 [Media]
 DefaultStoragePath=/media
+[Api]
+EndpointListenPort=44405
+MaxClients=3
+[FM]
+BandwithType=0
+SquelchLevel=350
+SquelchLimit=10
